search: Fix search suggestions not wrapping on overflow.

--- a/web/styles/search.css
+++ b/web/styles/search.css
@@ -157,6 +157,10 @@
             color: var(--color-text-search-hover);
         }
 
+        .typeahead-menu .simplebar-content {
+            min-width: unset;
+        }
+
         .typeahead-menu .simplebar-content > li > a {
             max-width: none;
         }
